support running locally

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,7 @@ services:
     build: django
     environment:
       DJANGO_SECRET_FILE: /run/secrets/django
-      HOSTNAME: catpowered.net
+      DJANGO_ALLOWED_HOST: catpowered.net
     secrets:
     - django
     volumes:
