--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -7,4 +7,4 @@ RUN pip install -r requirements.txt
 COPY . .
 
 EXPOSE 8000
-CMD python3 manage.py migrate ; gunicorn
+CMD python3 manage.py migrate ; exec gunicorn
