--- a/django/Dockerfile
+++ b/django/Dockerfile
@@ -6,5 +6,12 @@ COPY requirements.txt ./
 RUN pip install -r requirements.txt
 COPY . .
 
+COPY --chmod=755 <<EOT /entrypoint.sh
+#!/usr/bin/env bash
+set -e
+python3 manage.py migrate
+exec gunicorn
+EOT
+
 EXPOSE 8000
-CMD python3 manage.py migrate ; exec gunicorn
+ENTRYPOINT ["/entrypoint.sh"]
